@@ -1,6 +1,9 @@
 Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
+  - Add "exclude_message" option, which will exclude the message from the JSON
+    pattern.  This is useful if you are logging the message in the prefix for
+    example with "format_prefix".
 
 0.55  2018-07-19
   - format_prefix: Pass "category", "priority" and "caller level" to prefix so that %c, %p etc
